--- a/app.json
+++ b/app.json
@@ -40,14 +40,17 @@
       "output": "static",
       "favicon": "./src/assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-asset"],
+    "plugins": [
+      "expo-router",
+      "expo-asset"
+    ],
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "453bfe26-2f0c-410c-a7e1-661339cd76d7"
+        "projectId": "bd762324-7201-4dc8-9b94-97e0c83f6c1c"
       }
     },
     "owner": "dikomahendr4",
